--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@
 
 }
 
-.blur{ /*div que faz um blur quando o menu lateral vem*/
+.blur {
+    /*div que faz um blur quando o menu lateral vem*/
     position: fixed;
     width: 100%;
     height: 100%;
@@ -605,7 +606,7 @@ main {
         display: flex;
         flex-direction: column;
         align-items: center;
-        background-color: var(--corMain4);
+        background-color: var(--corMain);
         z-index: 3;
 
     }
@@ -665,18 +666,42 @@ main {
 }
 
 
-@media (max-width: 750px) {
-
-    #imagem_apresentacao img{
-        width: 80%;
-        border: none;
+@media (max-width: 772px) {
+    main {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
     }
-        .apreh1{
-            margin-left: 30px;
-            border: none;
+
+    #apresentacao {
+        gap: 40px;
+        height: 300px;
+        width: 100%;
+        align-items: center;
+    }
+
+    #imagem_apresentacao img {
+        border: 0;
+        width: 200px;
+        justify-content: center;
+    }
+
+    #apresentacao h1 {
+        font-size: 50px;
+        width: 400px;
+
+    }
+
+    .mensagem_contato p {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+        #main4{
+            gap: 60px;
         }
-    
+
 }
+
 
 
 
