--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@
     opacity: 0;
     pointer-events: none;
     transition: all .5s;
+    display: none;
 
 }
 
@@ -584,8 +585,12 @@ main {
 }
 
 
-
 @media (max-width: 1280px) {
+
+    .blur {
+            display: flex;
+    
+        }
 
     .todo_tablet {
         display: none;
