--- a/style.css
+++ b/style.css
@@ -588,9 +588,9 @@ main {
 @media (max-width: 1280px) {
 
     .blur {
-            display: flex;
-    
-        }
+        display: flex;
+
+    }
 
     .todo_tablet {
         display: none;
@@ -613,13 +613,15 @@ main {
         align-items: center;
         background-color: var(--corMain);
         z-index: 3;
+        width: 100%;
+        overflow: hidden;
 
     }
 
     .ul_outro_itens2 li {
         padding-bottom: 100px;
-        padding-left: 120px;
-        padding-right: 120px;
+        padding-left: 145px;
+        padding-right: 130px;
     }
 
     .ul_outro_itens2 a {
@@ -639,11 +641,14 @@ main {
     }
 
     .listras {
+        position: fixed;
         display: flex;
         width: 0px;
         transition: all .5s;
         overflow: hidden;
         z-index: 6;
+        height: 90%;
+        box-shadow: 1px 1px 40px black;
 
 
     }
@@ -687,13 +692,13 @@ main {
 
     #imagem_apresentacao img {
         border: 0;
-        width: 200px;
+        width: 300px;
         justify-content: center;
     }
 
     #apresentacao h1 {
-        font-size: 50px;
-        width: 400px;
+        font-size: 45px;
+        width: 340px;
 
     }
 
@@ -701,9 +706,27 @@ main {
         margin-left: 20px;
         margin-right: 20px;
     }
-        #main4{
-            gap: 60px;
-        }
+    #main2{
+        padding-bottom: 250px;
+    }
+    .sobre_mim {
+        width: 300px;
+
+    }
+
+    .sobre_mim h1 {
+        width: 300px;
+
+    }
+
+    .tituloHabilidades{
+        width: 300px;
+    }
+    #main4 {
+        gap: 60px;
+    }
+
+
 
 }
 
