--- a/style.css
+++ b/style.css
@@ -587,6 +587,34 @@ main {
 
 @media (max-width: 1280px) {
 
+
+    /*animação das letrinhas do menu*/
+    .sobre_e_habilidades a::before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 5px;
+            bottom: 0;
+            left: 0;
+            background-color: rgb(0, 0, 0);
+            /* Cor do underline */
+            transform: scaleX(0);
+            /* Começa com zero de largura para esconder */
+            transform-origin: bottom left;
+            /* Origem da transformação */
+            transition: transform 0.3s ease;
+            /* Adiciona a transição */
+        }
+    
+        /* Efeito de transição quando o mouse passa sobre o link */
+        .sobre_e_habilidades a:hover::before {
+            transform: scaleX(1);
+            /* Aumenta a largura para revelar o underline */
+        }
+
+
+
+
     .blur {
         display: flex;
 
@@ -620,8 +648,8 @@ main {
 
     .ul_outro_itens2 li {
         padding-bottom: 100px;
-        padding-left: 145px;
-        padding-right: 130px;
+        padding-left: 0px;
+        padding-right: 0px;
     }
 
     .ul_outro_itens2 a {
@@ -644,10 +672,10 @@ main {
         position: fixed;
         display: flex;
         width: 0px;
-        transition: all .5s;
+        transition: all .6s;
         overflow: hidden;
         z-index: 6;
-        height: 90%;
+        height: 600px;
         box-shadow: 1px 1px 40px black;
 
 
